--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,20 @@
     margin: 0;
     padding: 0;
 }
+* {
+    scroll-behavior: smooth;
+       }
+ 
 
 .navbar {
     padding: 10px;
+    
     background-color: rgb(220, 224, 231);
     padding-bottom: 20px;
     padding-top: 15px;
     position: sticky;
     top: 0px;
-    width: 100%;
+    /* width: 205vh; */
     z-index: 50;
     border: 1px solid rgb(176, 176, 176);
 
@@ -198,7 +203,7 @@ box-shadow:0 2px 4px 2px gray;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    height: 515px;
+    height: 520px;
     background-color: whitesmoke;
     margin: 26px;
     padding: 10px;
@@ -219,14 +224,14 @@ box-shadow:0 2px 4px 2px gray;
 
 .project:hover {
     cursor: pointer;
-    transition: 0.2s;
+    /* transition: 0.2s; */
     height: 460px;
     width: 300px;
     /* color: #ff4d94; */
     background-color: white;
     box-shadow: 0 2px 4px 2px rgb(113, 112, 112);
     margin-top: 24px;
-    transition: 0.5s;
+    transition: 0.2s;
     transform: scale(1.1);
 }
 
@@ -275,38 +280,171 @@ box-shadow:0 2px 4px 2px gray;
 }
 
 .about-container {
-    height: 500px;
-    width: 950px;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 570px;
+    width: 1168px;
     margin: 15px;
     background-color: white;
     box-shadow: 0 2px 4px 2px gray;
 
 }
+.img-aarti-container{
+  
+    height: 200px;
+    width: 250px;
+    background-color: rgb(230, 227, 227);
+    border: 1px dotted rgb(202, 200, 200);
+    padding: 30px;
+  margin: 15px;
+  margin-left: 25px;
+  margin-top: 35px;
+    border-radius: 100%;
+    background-color: rgb(251, 252, 253);
+}
+.img-aarti-container:hover{
+  cursor: pointer;
+  transition: 0.2s;
+    height: 200px;
+    width: 250px;
+    background-color: white;
+    box-shadow: 0 2px 4px 1px gray;
+    padding: 30px;
+  margin: 15px;
+  margin-left: 25px;
+  margin-top: 35px;
+    border-radius: 100%;
+    background-color: rgb(251, 252, 253);
+}
 .img-aarti{
+  
     border-radius: 100%;
     margin-top: -15px;
     position: absolute;
-    right: 30px;
+    top: 70px;
+    left: 53px;
 border: 1px solid gray;
-    height: 220px;
-    width: 180px;
+    height: 210px;
+    width: 175px;
     border-radius: 100%;
-    
    
    
 }
-.img-aarti-container{
-    position: relative;
-    height: 199px;
-    width: 150px;
-    background-color: white;
-    box-shadow: 0 2px 4px 2px gray;
-    padding: 30px;
-    margin: 10px;
-    margin-top: 90px;
-    margin-left: 120px;
-    border-radius: 100%;
-    background-color: rgb(251, 252, 253);
-    display: inline-block;
+.know-me{
+    text-align: center;
+    font-family: cursive;
+    color: rgb(87, 85, 85);
+    font-size: 20px;
+    padding-top: 10px;
 }
 
+.info-education{
+    position: absolute;
+    font-size: 22px;
+   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   /* bottom: 275px; */
+   color: black;
+   font-size: 22px;
+  left: 400px;
+   text-align: center;
+  color:rgb(50, 49, 49);
+
+}
+.clg-list{
+  margin-left: 90px;  
+}
+.year{
+    margin-right: 240px;
+    font-size: 19px;
+}
+.about-heading{
+   
+    position: absolute;
+    right: 315px;
+    margin: 20px;
+    height: 25px;
+    padding-top: 5px;
+   padding-left: 30px;
+   padding-right: 30px;
+   border-radius: 20px;
+color: rgb(56, 54, 54);
+border: 1px solid gray;
+background-color: whitesmoke;
+}
+
+
+
+
+.about-heading:hover{
+  
+    cursor: pointer;
+    box-shadow: 0 1px 3px 1px gray;
+    position: absolute;
+  right: 315px;
+
+    margin: 20px;
+    height: 25px;
+    padding-top: 5px;
+   padding-left: 30px;
+   padding-right: 30px;
+   border-radius: 20px;
+color: rgb(56, 54, 54);
+border: 1px solid gray;
+background-color: whitesmoke;
+}
+.education-container{
+    margin: 20px;
+    width: 1150px;
+    height: 500px;
+    margin-top: 35px;
+    margin-right: 37px;
+    border-radius: 20px;
+    background-color: whitesmoke;
+    box-shadow: 0px 2px 4px 2px grey;
+}
+
+.info-about-degree{
+    margin-top: 80px;
+}
+.Vidyapith{
+    margin-left: -38px;
+}
+.Vidyamandir{
+    margin-left: -62px;
+}
+
+.contact{
+    margin-top: 50px;
+}
+
+.contact-container{
+    height: 420px;
+    width: 500px;
+    margin: 20px;
+    margin-left: 380px;
+    background-color: rgb(213, 213, 216);
+    box-shadow: 1px 2px 6px 3px gray;
+}
+.heading-contact{
+    font-size: 22px;
+    color: rgb(56, 55, 55);
+    text-align: center;
+    
+}
+.input-box{
+    height: 22px;
+    margin-left: 140px;
+    width: 220px;
+    
+}
+.msg-btn{
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: white;
+    margin-left: 180px;
+    border-radius: 20px;
+    background-color: rgb(26, 26, 198);
+}
