--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@
     margin-top: -24px;
     text-align: end;
     margin-right: 28px;
+    text-decoration: none;
 
 }
 
@@ -91,18 +92,29 @@ span a {
     display: inline-block;
 }
 
+.Show-resm{
+    color: rgb(7, 7, 7);
+    border-bottom: none;
+  
+   
+}
 .btn-resume {
     height: 30px;
     padding-left: 25px;
     padding-right: 25px;
-    margin-top: 20px;
+    margin-top: 40px;
     margin-left: 135px;
     border-radius: 3px;
     padding-bottom: 10px;
+    color: black;
     padding-top: 6px;
+    text-decoration: none;
+    border-bottom: none;
     background-color: rgb(220, 224, 231);
     border: 1px solid rgb(74, 72, 72);
 }
+
+
 
 .btn-resume:hover {
     height: 30px;
@@ -113,7 +125,7 @@ span a {
     border-radius: 3px;
     padding-bottom: 10px;
     padding-top: 6px;
-    background-color: rgb(74, 72, 72);
+    background-color: rgb(110, 108, 108);
     color: white;
     transition: 0.2s;
 
@@ -447,4 +459,64 @@ background-color: whitesmoke;
     margin-left: 180px;
     border-radius: 20px;
     background-color: rgb(26, 26, 198);
+}
+
+.container-footer{
+    height: 350px;
+    color: rgb(90, 88, 88);
+    background-color:rgb(220, 224, 231);
+    /* position: sticky;
+    top: 0px;
+    z-index: 50; */
+    border: 1px solid rgb(176, 176, 176);
+   display: flex;
+
+}
+.quick-links{
+    margin-left: 150px;
+   margin-top: 36px;
+   
+  
+}
+.footer-link{
+    text-decoration: none;
+    color: rgb(26, 25, 25);
+}
+.link{
+    margin-left: 56px;
+}
+.list{
+    color: rgb(26, 25, 25);
+}
+.adress-container{
+    display: inline-block;
+    /* margin-left:  600px; */
+   margin-top: -800px;
+
+}
+
+.address{
+    font-size:20px;
+    
+    
+}
+.multi{
+    margin-left: 42px;
+}
+.addr{
+    margin-top: -30px;
+}
+.tagline-aaru{
+    margin-top: 25px;
+}
+.mob-no{
+    margin-left: 42px;
+    font-size: 22px;
+}
+.logo {
+    border-radius: 50%;
+    margin-left: 8px;
+    position: relative;
+    top: 30px;
+    box-shadow: 0 3px 4px 2px rgb(105, 103, 103);
 }
